--- a/templates/apps/public-pages/products.html
+++ b/templates/apps/public-pages/products.html
@@ -1,5 +1,5 @@
 {% extends "apps/base.html" %}
-{% load make_url %}
+{% load tags %}
 {% block content %}
     <div class="dropdown-menu dropdown-menu-end py-0" aria-labelledby="navbarDropdownUser">
         <div class="bg-white dark__bg-1000 rounded-2 py-2">
