--- a/templates/apps/private-pages/market.html
+++ b/templates/apps/private-pages/market.html
@@ -3,38 +3,6 @@
 {% block content %}
     <div class="card mb-3">
         <div class="card-body">
-            <!-- Modal -->
-            {#            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"#}
-            {#                 aria-hidden="true">#}
-            {#                <div class="modal-dialog" role="document">#}
-            {#                    <div class="modal-content">#}
-            {#                        <div class="modal-header">#}
-            {#                            <h5 class="modal-title" id="exampleModalLabel">Oqim yaratish</h5>#}
-            {#                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">#}
-            {#                                <span aria-hidden="true">&times;</span>#}
-            {#                            </button>#}
-            {#                        </div>#}
-            {#                        <div class="modal-body">#}
-            {#                            <form class="form-class" action="{% url 'create-stream' %}" method="post" >#}
-            {#                                {% csrf_token %}#}
-            {#                                #}
-            {#                                <input type="hidden" name="csrfmiddlewaretoken"#}
-            {#                                       value="vybnCLAz1XOITunMGOfxb2dv24FEF9QldPZFL0PgAIuQZHy2biuQbmhxFch49Ole">#}
-            {#                                <input name="product_id" type="hidden" id="hidden_product" value="test">#}
-            {##}
-            {#                                Oqim nomi <input type="text" name="title" class="form-control" placeholder#}
-            {#                                                 mt-2="Oqim uchun nom kiriting" required id="id_title">#}
-            {##}
-            {#                                Chegirma <input type="text" name="discount" class="form-control" placeholder#}
-            {#                                                mt-2="Chegirma miqdori: {{ product.benefit }} so&#x27;mgacha"#}
-            {#                                                id="id_discount">#}
-            {##}
-            {#                                <input type="submit" class="btn btn-primary mt-4" value="Oqim yaratish">#}
-            {#                            </form>#}
-            {#                        </div>#}
-            {#                    </div>#}
-            {#                </div>#}
-            {#            </div>#}
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
                 <!-- Modal content -->
@@ -50,7 +18,7 @@
                             <div class="modal-body">
                                 <form method="post" class="form-class" action="{% url 'create-stream' %}">
                                     {% csrf_token %}
-                                    <input type="hidden" name="product" id="hidden_product" value="{{ product.id }}">
+                                    <input type="hidden" name="product" id="hidden_product">
                                     <div class="modal-body">
                                         <div class="mb-3">
                                             <label for="name" class="form-label">Oqim nomi</label>
@@ -62,11 +30,7 @@
                                             <input type="text" name="discount" class="form-control"
                                                    placeholder="Chegirma miqdori" id="id_discount">
                                         </div>
-                                        <div class="mb-3">
-                                            <label for="additional_benefit" class="form-label">Qo'shimcha foyda</label>
-                                            <input type="text" name="benefit" class="form-control"
-                                                   placeholder="Qo'shimcha foyda" id="id_additional_benefit">
-                                        </div>
+                                      
                                         <div class="form-check mb-3">
                                             <input type="checkbox" name="paid_delivery" class="form-check-input"
                                                    id="id_paid_delivery">
@@ -104,8 +68,8 @@
                             <form action="/admin_page/market/" method="GET" class="position-relative"
                                   style="width: 100%"
                                   data-bs-display="static" autocomplete="off">
-                                <input type="hidden" name="csrfmiddlewaretoken"
-                                       value="vybnCLAz1XOITunMGOfxb2dv24FEF9QldPZFL0PgAIuQZHy2biuQbmhxFch49Ole">
+                                <input type="hidden" name=""
+                                       value="">
                                 <input id="search-input" name="q" class="form-control search-input" type="search"
                                        placeholder="Qidiruv..." aria-label="Search"/>
                                 <span class="fas fa-search search-box-icon"></span>
@@ -144,13 +108,12 @@
 
                                 </ul>
 
-                                <!-- <form method="post"> <input type="hidden" name="csrfmiddlewaretoken" value="vybnCLAz1XOITunMGOfxb2dv24FEF9QldPZFL0PgAIuQZHy2biuQbmhxFch49Ole"> <input type="hidden" name="product_id" value="442"> <input type="submit" value="Oqim yaratish" class="btn btn-primary"> </form> -->
 
                                 <a href="https://t.me/alijahon_uz_Internet_magazin/1523"
                                    class="btn bg-danger text-white mt-2">Reklama
                                     Posti</a>
                                 <button class="btn btn-primary btn_open_modal" type="button" data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal" name="442">
+                                        data-bs-target="#exampleModal" name="{{ product.id }}">
                                     Oqim yaratish
                                 </button>
                                 <a href="/admin_page/product/442" class="btn bg-danger text-white mt-2">Batafsil</a>
@@ -191,4 +154,10 @@
             </div>
         </div>
     </div>
+    <script>
+        $('.btn_open_modal').on('click', function () {
+            let product = $(this).attr('name');
+            $('#hidden_product').val(product);
+        })
+    </script>
 {% endblock %}
