--- a/templates/apps/public-pages/main-page.html
+++ b/templates/apps/public-pages/main-page.html
@@ -1,6 +1,6 @@
 {% extends "apps/base.html" %}
 {% load static %}
-
+{% load tags %}
 {% block content %}
 
     <div class="card-body bg-light px-1 py-0">
@@ -31,7 +31,7 @@
                     <div class="border rounded-1 d-flex flex-column justify-content-between pb-3">
                         <div class="overflow-hidden">
                             <div class="position-relative rounded-top overflow-hidden">
-                                <a class="d-block" href="{% url "product_detail_page" product.pk %}">
+                                <a class="d-block" href="{% url "product_detail_page" product.slug %}">
                                     <img class="img-fluid rounded-top" src="{{ product.image.url }}" alt=""></a>
                             </div>
                             <div class="p-2">
@@ -52,7 +52,7 @@
 
                             <div>
                                 <a class="btn btn-sm btn-falcon-default" style="width: 130px;"
-                                   href="/product-detail/bassen-stoykalik-220ga-150x60-1tonna-660-litr"
+                                   href="{% url 'product_detail_page' product.pk %}"
                                    data-bs-toggle="tooltip" data-bs-placement="top" data-bs-original-title="" title="">
                                     <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true"
                                          focusable="false"
@@ -64,7 +64,19 @@
                                     <!-- <span class="fas fa-cart-plus"></span> Font Awesome fontawesome.com -->
                                 </a>
                             </div>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'wish-create' product.pk %}" id="wish-link-{{ product.pk }}"
+                                   style="text-decoration: none; color: inherit;">
+    <span style="position: relative;">
+        <i class="fas fa-heart"
+           style="color: {% if request|is_like:product.pk %}red{% endif %}; margin-left: 10px; font-size: 15px;"></i>
+    </span>
+                                </a>
+                            {% endif %}
+
+
                         </div>
+
                     </div>
                 </div>
             {% endfor %}
