--- a/templates/apps/public-pages/orders.html
+++ b/templates/apps/public-pages/orders.html
@@ -1,4 +1,5 @@
 {% extends "apps/base.html" %}
+{% load tags %}
 
 {% block content %}
     <div class="card mb-3">
@@ -6,23 +7,26 @@
             <div class="container" style="padding-top: 10px;">
                 <div class="content_cart">
 
-                    <div class="content_single-product-nouser">
-                        <div class="row">
+                    {% for order in orders %}
+                        <div class="content_single-product-nouser">
+                            <div class="row">
 
-                            <div class="col-md-4 p-5">
-                                <h3>Mahsulot: Izlash kitobi</h3>
-                                <small>Mahsulot narxi: 85000</small>
-                                <p>Soni: 1</p>
+                                <div class="col-md-4 p-5">
+                                    <h3>Mahsulot: {{ order.product.title }}</h3>
+                                    <small>Mahsulot narxi:
+                                        {% if order.stream.discount %}
+                                            {{ order.product.price|subtract:order.stream.discount }}
+                                        {% else %}
+                                            {{ order.product.price }}
+                                        {% endif %}
+                                    </small>
+                                    <p>Soni: 1</p>
+                                </div>
+
                             </div>
-
-                            <div class="col-md-4 p-5">
-                                <h3>Mahsulot: Izlash kitobi</h3>
-                                <small>Mahsulot narxi: 85000</small>
-                                <p>Soni: 1</p>
-                            </div>
-
                         </div>
-                    </div>
+                    {% endfor %}
+
 
                 </div>
             </div>
